# python-chrome-devtools-protocol

./: .bandit  .bish-index  .bish.sqlite  .gitignore  .pf  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION.md  Makefile  PROJECT.txt  README.md  REVIEW_SUMMARY.md  SECURITY.md  SECURITY_ASSESSMENT.md  SECURITY_SETUP.md  SECURITY_UPDATES.md  WARP.md  basic_check.sh  check_issues.sh  check_poetry.sh  comprehensive_pf_test.py  comprehensive_test.py  env_check.sh  env_quick_check.py  minimal_test.py  mypy.ini  pf_test_results.txt  pf_test_results_detailed.json  pyproject.toml  quick_check.py  requirements.txt  run_pf_tests.py  setup.py  simple_test.py  test_all_pf.sh  test_every_pf_command.py  test_import.py  (+2 more)
.github/: .bish.sqlite  dependabot.yml
.github/workflows/: .bish.sqlite  auto-advance-ball.yml  auto-amazonq-review.yml  auto-assign-copilot.yml  auto-assign-pr.yml  auto-bug-report.yml  auto-close-issues.yml  auto-complete-cicd-review.yml  auto-copilot-code-cleanliness-review.yml  auto-copilot-functionality-docs-review.yml  auto-copilot-org-playwright-loop.yaml  auto-copilot-org-playwright-loopv2.yaml  auto-copilot-org-playwright-loopv2.yml  auto-copilot-playwright-auto-test.yml  auto-copilot-test-review-playwright.yml  auto-feature-request.yml  auto-gpt5-implementation.yml  auto-label-comment-prs.yml  auto-label.yml  auto-llm-issue-review.yml  auto-llm-pr-review.yml  auto-sec-scan.yml  auto-tag-based-review.yml  daily-continuous-progress.yml  oz-pr-review.yml  runner-smoke-test.yml  security-review.yml  swarm-mode.yml  trigger-all-repos.yml
cdp/: .bish-index  .bish.sqlite  __init__.py  accessibility.py  animation.py  application_cache.py  audits.py  autofill.py  background_service.py  bluetooth_emulation.py  browser.py  browser_control.py  cache_storage.py  cast.py  connection.py  console.py  css.py  database.py  debugger.py  device_access.py  device_orientation.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  event_breakpoints.py  extensions.py  fed_cm.py  fetch.py  file_system.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input.py  input_.py  inspector.py  io.py  layer_tree.py  log.py  (+24 more)
cdp/accessibility/: commands.py  events.py  types.py
cdp/cast/: events.py  (+2 more)
docs/: .bish-index  .bish.sqlite  api.rst  browser_control.rst  changelog.rst  conf.py  connection.md  develop.rst  getting_started.rst  implementation.md  index.rst  overview.rst  requirements.txt
examples/: .bish-index  .bish.sqlite  browser_control_example.py  connection_example.py
generator/: .bish-index  .bish.sqlite  README.md  generate.py  test_generate.py
test/: .bish-index  .bish.sqlite  test_browser_control.py  test_cdp.py  test_connection.py
(+180 files in other folders)
